name:                 megaparsec-site
version:              0.1.0.0
cabal-version:        >= 1.10
license:              BSD3
synopsis:             Site of Megaparsec project with educational materials
description:          Site of Megaparsec project with educational materials
homepage:             https://mrkkrp.github.io/megaparsec/
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov@opmbx.org>
maintainer:           Mark Karpov <markkarpov@opmbx.org>
category:             Web
build-type:           Simple
extra-doc-files:      README.md
extra-source-files:   makefile
data-files:           css/*.css
                    , js/*.min.js
                    , templates/*.html
                    , tutorials/*.md
                    , 404.md
                    , index-header.md

executable site
  main-is:            Main.hs
  hs-source-dirs:     src
  ghc-options:        -threaded -Wall
  build-depends:      base   >= 4.8 && < 5.0
                    , hakyll >= 4.7 && < 4.9
  default-language:   Haskell2010
