name:                   infixer
version:                1.0.0
cabal-version:          >=1.10

build-type:             Simple

author:                 Matteo Ferrando
maintainer:             Matteo Ferrando <matteo.ferrando2@gmail.com>

category:               Programming Language, Parser
synopsis:               Infixer example
description:
        An example to show the usage of Alex/Happy with Megaparsec.

homepage:               https://github.com/mrkkrp/megaparsec-site/

extra-source-files:     README.md

bug-reports:            https://github.com/mrkkrp/megaparsec-site/issues
source-repository head
  type:                 git
  location:             https://github.com/mrkkrp/megaparsec-site.git


executable infixer
  hs-source-dirs:       src
  main-is:              Main.hs

  build-tools:          alex, happy
  other-modules:        Lexer, Parser

  default-extensions:   TemplateHaskell

  build-depends:        base >=4.8 && <5.0
                      , array
                      , containers
                      , megaparsec >=5 && <6
  default-language:     Haskell2010

  ghc-options:          -Wall -j4 -O2
